# University8

APTP/: Notes.xopp
APTP/hairdressers-queue-simulation/: Cargo.toml
APTP/hairdressers-queue-simulation/src/: main.rs
CCB/task_01/: Cargo.toml
CCB/task_01/src/: tcp_client.rs  tcp_radio.rs  tcp_server.rs  udp_client.rs  udp_server.rs
CCB/task_02/message_board/: Cargo.toml  index.html
CCB/task_02/message_board/src/: main.rs
CCB/task_02/word_sorter/: Cargo.toml  Dockerfile  sorter.html
CCB/task_02/word_sorter/src/: main.rs
CCB/task_03/city-game/: Cargo.toml
CCB/task_04/todo_api/: Cargo.toml  Dockerfile  Insomnia.json  index.html
CNAT/05_Global_networks_IPv6_networking/KE-403_Raschupkin_EV_task_2_5/: KE-403_Raschupkin_EV_task_2_5.topo
CNAT/Course_Work/: Physical_Scheme.drawio  Subnets.drawio  ~$рсовая_работа_Компьютерные_сети_и_телекоммуникации_Ращупкин.docx  ~WRL1135.tmp  ~WRL2674.tmp  Курсовая_работа_Компьютерные_сети_и_телекоммуникации_Ращупкин - Copy.docx  Курсовая_работа_Компьютерные_сети_и_телекоммуникации_Ращупкин.docx
ITPM/task_01/: ITPM_task_01_Raschupkin.docx
ITPM/task_02/: ITPM_task_02_Raschupkin.docx  ITPM_task_02_Raschupkin_Cal.docx  ~$PM_task_02_Raschupkin.docx  Календарный план (шаблон таблицы).docx
ITPM/task_03/: Gantt2024.xlsx  ITPM_task_03_Raschupkin.docx  диаграмма Ганта (шаблон) 2024.xlsx  диаграмма Ганта Ращупкин 2024.xlsx
ITPM/task_04/: ITPM_task_04_Raschupkin.docx
ITPM/task_06/: ITPM_task_06_Raschupkin.docx
RAASD/: Варианты.doc
RAASD/task_01/: Raschupkin-01-Vision.doc
RAASD/task_02/: Raschupkin-02-01-Interview.docx  Raschupkin-02-02-Requirementss.docx  ДВИ.drawio
RAASD/task_03/: Raschupkin-03-Use-case-descriptions.docx  ДВИ.drawio
WTPA/task_01/: task_01.mw
WTPA/task_02/: task_02.mw
(+18 files in other folders)
